# msfc-ccd

./: .gitattributes  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: black.yml  publish.yml  ruff.yml  tests.yml
docs/: conf.py  index.rst
docs/reports/: bias.ipynb  dark-current.ipynb
msfc_ccd/: __init__.py  _cameras.py  _sensors.py  abc.py  fits.py  samples.py
msfc_ccd/_data/: ESIS1_00002.fit
msfc_ccd/_data/fe55/: ESIS3_05384.fit
msfc_ccd/_images/: __init__.py  _images.py  _sensor_images.py  _tap_images.py  _vectors.py  abc.py
msfc_ccd/_images/_tests/: test_images.py  test_sensor_images.py  test_tap_images.py  test_vectors.py
msfc_ccd/_tests/: test_cameras.py  test_fits.py  test_sensors.py
