[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "msfc-ccd"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "A Python library for characterizing and using the CCD cameras developed by Marshall Space Flight Center."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "named-arrays==0.24.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "nbsphinx",
    "sphinx-codeautolink",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/sun-data/msfc-ccd"
Documentation = "https://msfc-ccd.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["msfc_ccd"]

[tool.setuptools_scm]

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "D",
    "DOC",
]
ignore = [
    "DOC201",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
